--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset = "UTF-8">
     <meta name = "viewport" content = "width=device-width, initial-scale=1.0">
     <meta http-equiv = "X-UA-Compatible" content = "IE-edge">
-    <link rel = "stylesheet" href = "style.css">
+    <link rel = "icon" type = "image/jpg" href = "/images/plinhcutii.jpg">
+    <link rel = "stylesheet" href = "style_index.css">
     <script src = "https://kit.fontawesome.com/51c7e3f1d1.js" crossorigin = "anonymous"></script>
     
     <head>
