--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
 
         <img src = "images/hosyphat.jpg" id = "HoSyPhat">
 
-        <section>
+        <section id = "Phat">
 
             <div id = "FirstWord">
 
