--- a/about.html
+++ b/about.html
@@ -63,7 +63,7 @@
 
                 <button class = "prev" onclick = "SlideLeft()"> <p>&#8592;</p> </button>
                 <button class = "next" onclick = "SlideRight()"> <p>&#8594;</p> </button>
-                <p id = "Hobby"> Billards </p>
+                <p id = "Hobby"> Billiards </p>
 
 
                 <img src = "images/Billards.jpg" id = "HobbiesImages"> 
