--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
 
             <div id = "FirstWord">
 
-                <h1> Hi, my name is Terrobyte</h1>
+                <h1> Hi, my name is Terrobyte <button onclick = "ChangeHeart()"> <i class="fa-solid fa-heart fa-beat fa-4x" id = "Heart"> </i> </button> </h1>
 
             </div>
 
